assets/css/main.css
/* ... */
.slideOutUp {
  -webkit-animation-name: slideOutUp;
          animation-name: slideOutUp;
}

.highlight {
  background-color: #faf9f9;
  -webkit-border-radius: 3px;
          border-radius: 3px;
  margin: 0;
}

.highlighter-rouge {
  color: #e74b3c;
  font-weight: 400;
  border: 1px solid #607D8B;
  -webkit-border-radius: 3px;
          border-radius: 3px;
  padding: 0.1rem 0.5rem;
}

.highlight .hll {
  background-color: #ffc;
}

.highlight .c {
  color: #999;
}

/* Comment */
.highlight .err {
  color: #a00;
  background-color: #faa;
}

/* Error */
.highlight .k {
  color: #069;
}

/* Keyword */
.highlight .o {
  color: #555;
}

/* Operator */
.highlight .cm {
  color: #09f;
  font-style: italic;
}

/* Comment.Multiline */
.highlight .cp {
  color: #099;
}

/* Comment.Preproc */
.highlight .c1 {
  color: #999;
}

/* Comment.Single */
.highlight .cs {
  color: #999;
}

/* Comment.Special */
.highlight .gd {
  background-color: #fcc;
  border: 1px solid #c00;
}

/* Generic.Deleted */
.highlight .ge {
  font-style: italic;
}

/* Generic.Emph */
.highlight .gr {
  color: #f00;
}

/* Generic.Error */
.highlight .gh {
  color: #030;
}

/* Generic.Heading */
.highlight .gi {
  background-color: #cfc;
  border: 1px solid #0c0;
}

/* Generic.Inserted */
.highlight .go {
  color: #aaa;
}

/* Generic.Output */
.highlight .gp {
  color: #009;
}

/* Generic.Prompt */
/* Generic.Strong */
.highlight .gu {
  color: #030;
}

/* Generic.Subheading */
.highlight .gt {
  color: #9c6;
}

/* Generic.Traceback */
.highlight .kc {
  color: #069;
}

/* Keyword.Constant */
.highlight .kd {
  color: #069;
}

/* Keyword.Declaration */
.highlight .kn {
  color: #069;
}

/* Keyword.Namespace */
.highlight .kp {
  color: #069;
}

/* Keyword.Pseudo */
.highlight .kr {
  color: #069;
}

/* Keyword.Reserved */
.highlight .kt {
  color: #078;
}

/* Keyword.Type */
.highlight .m {
  color: #f60;
}

/* Literal.Number */
.highlight .s {
  color: #d44950;
}

/* Literal.String */
.highlight .na {
  color: #4f9fcf;
}

/* Name.Attribute */
.highlight .nb {
  color: #366;
}

/* Name.Builtin */
.highlight .nc {
  color: #0a8;
}

/* Name.Class */
.highlight .no {
  color: #360;
}

/* Name.Constant */
.highlight .nd {
  color: #99f;
}

/* Name.Decorator */
.highlight .ni {
  color: #999;
}

/* Name.Entity */
.highlight .ne {
  color: #c00;
}

/* Name.Exception */
.highlight .nf {
  color: #c0f;
}

/* Name.Function */
.highlight .nl {
  color: #99f;
}

/* Name.Label */
.highlight .nn {
  color: #0cf;
}

/* Name.Namespace */
.highlight .nt {
  color: #2f6f9f;
}

/* Name.Tag */
.highlight .nv {
  color: #033;
}

/* Name.Variable */
.highlight .ow {
  color: #000;
}

/* Operator.Word */
.highlight .w {
  color: #bbb;
}

/* Text.Whitespace */
.highlight .mf {
  color: #f60;
}

/* Literal.Number.Float */
.highlight .mh {
  color: #f60;
}

/* Literal.Number.Hex */
.highlight .mi {
  color: #f60;
}

/* Literal.Number.Integer */
.highlight .mo {
  color: #f60;
}

/* Literal.Number.Oct */
.highlight .sb {
  color: #c30;
}

/* Literal.String.Backtick */
.highlight .sc {
  color: #c30;
}

/* Literal.String.Char */
.highlight .sd {
  color: #c30;
  font-style: italic;
}

/* Literal.String.Doc */
.highlight .s2 {
  color: #c30;
}

/* Literal.String.Double */
.highlight .se {
  color: #c30;
}

/* Literal.String.Escape */
.highlight .sh {
  color: #c30;
}

/* Literal.String.Heredoc */
.highlight .si {
  color: #a00;
}

/* Literal.String.Interpol */
.highlight .sx {
  color: #c30;
}

/* Literal.String.Other */
.highlight .sr {
  color: #3aa;
}

/* Literal.String.Regex */
.highlight .s1 {
  color: #c30;
}

/* Literal.String.Single */
.highlight .ss {
  color: #fc3;
}

/* Literal.String.Symbol */
.highlight .bp {
  color: #366;
}

/* Name.Builtin.Pseudo */
.highlight .vc {
  color: #033;
}

/* Name.Variable.Class */
.highlight .vg {
  color: #033;
}

/* Name.Variable.Global */
.highlight .vi {
  color: #033;
}

/* Name.Variable.Instance */
.highlight .il {
  color: #f60;
}

/* Literal.Number.Integer.Long */
.css .o,
.css .o + .nt,
.css .nt + .nt {
  color: #999;
}

*, *::after, *::before {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

body {
  font-family: "Lato", sans-serif;
  -webkit-font-smoothing: antialiased;
  background-color: #262626;
  margin: 0;
}
.four04{
	color:white;
}
.four04 .title{
	font-size: 1.5rem;
}
.four04 .explaination{
	font-size: 1.0rem;
}


/*------Resume page--------*/
.resume .box {
	background:white;
	border-radius: 10px;
	margin: 6vh 6vw 6vh 6vw;
	animation-delay:0.9s;
	animation-duration:0.8s;
	animation-fill-mode: both;
	animation-name: fadeInDown;
}
.resume .inner-box{
	padding:1vh 2vw 5px 4vw;
}
.resume .date{
	font-size: 0.8rem;
	color: grey;
	margin: 0;
}
.resume .section_header {
	font-size: 1.5rem;
	margin: 0;
	color:#069;
}
.resume .title{
	color: white;
	padding-left: 6vw;
	padding-top: 10px;
	margin: 0;
}
.resume a{
	color: #4fa5d0;
	text-decoration: none;
}
.resume .resume_title {
	font-size: 1.2rem;
	margin:20px 0 10px 0;
}
.resume .details {
	font-size: 1.0rem;
	margin: 0;
}
.resume {
	/*background-attachment:fixed;
	background-size: auto 100vh;
	background-image: url(../img/sweden.jpg);
	background-position:center;
	background-repeat:no-repeat;*/
	background-color: #bf334a;
	background-image: linear-gradient(90deg, #bf334a, #343c66);
	
	animation-delay:0.8s;
	animation-duration:0.7s;
	animation-fill-mode: both;
	animation-name: fadeInDown;
	
	/*
  width: 100%;
  height: 100vh;
  min-height: 700px;
  background-image: url(../img/sweden.jpg);
  background-size: cover;
  background-position: 50% 50%;
  background-repeat: no-repeat;*/
}
/*-------end resume page------*/



p {
  font-size: 1.1rem;
  line-height: 1.75rem;
  margin: 0 0 1.75rem;
  color: #525c65;
  font-weight: 400;
}

blockquote {
  font-size: 1.2rem;
  font-style: italic;
  border-left: 3px solid #c25b6c;
  padding-left: 2rem;
  margin: 0 0 1.75rem;
  color: #333333;
}
/* ... */

